--- a/routing/branches/1.0/composer.json
+++ b/routing/branches/1.0/composer.json
@@ -8,7 +8,7 @@
     "PSR-7",
     "PSR-15"
   ],
-  "time": "2021-02-17",
+  "time": "2021-02-18",
   "license": "MIT",
   "authors": [
     {
@@ -32,7 +32,6 @@
     "league/container": "^3.3",
     "league/route": "^5.0",
     "nyholm/psr7": "^1.3",
-    "pollen-solutions/container": "^1.0",
     "pollen-solutions/http": "^1.0",
     "pollen-solutions/support": "^1.0",
     "pollen-solutions/view": "^1.0"
@@ -49,6 +48,9 @@
     "psr-4": {
       "Pollen\\Routing\\Test\\": "tests"
     }
+  },
+  "suggest": {
+    "pollen-solutions/container" : "Pollen Container Component - PSR-11 ready Dependencies Injection Container"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
