--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "pollen-solutions/routing",
-  "description": "Pollen Routing Component - HTTP request mapping and HTTP response resolution.",
+  "description": "Pollen Solutions - Routing Component - HTTP request mapping and HTTP response resolution.",
   "homepage": "https://www.presstify.com/pollen-solutions/routing/",
   "keywords": [
     "pollen-solutions",
@@ -8,25 +8,17 @@
     "PSR-7",
     "PSR-15"
   ],
-  "time": "2021-06-26",
+  "time": "2021-07-09",
   "license": "MIT",
   "authors": [
     {
       "name": "Jordy Manner",
-      "email": "jordy@presstify.com",
-      "role": "Developper"
-    }
-  ],
-  "repositories": [
-    {
-      "type": "composer",
-      "url": "https://composer.presstify.com/pollen-solutions/"
+      "email": "jordy@presstify.com"
     }
   ],
   "require": {
-    "php": ">=7.4",
-    "composer/composer": "^2.0",
-    "composer/installers": "~1.0",
+    "php": "^7.4 || ^8.0",
+    "ext-json": "*",
     "laminas/laminas-diactoros": "^2.5",
     "laminas/laminas-httphandlerrunner": "^1.3",
     "league/route": "^5.0",
@@ -36,7 +28,8 @@
     "pollen-solutions/view": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.0"
+    "phpunit/phpunit": "^9.0",
+    "roave/security-advisories": "dev-latest"
   },
   "autoload": {
     "psr-4": {
